<resources>
    <string name="app_name">AddressBookApp</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="first_name">First name..</string>
    <string name="last_name">Last name ..</string>
    <string name="date">DOB: dd:mm:yyyy</string>
    <string name="address">Address..</string>
    <string name="postcode">Postcode..</string>
    <string name="city">City..</string>
    <string name="email">Email..</string>
    <string name="phone_number">Phone number..</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_contact">delete contact</string>
    <string name="call_contact">call contact</string>
    <string name="to_add_a_contact_please_click_the_button_in_right_hand_corner">To add a contact please click the \'+\' button in the right hand corner</string>D
    <string name="validate_firstName_Error">"Please provide a first name longer than one character"</string>
    <string name="validate_lastname_Error">"Please provide a last name longer than one character"</string>
    <string name="validate_email_Error">"Please provide a correct email"</string>
    <string name="validate_phone_Error">"Please provide a correct phone number (10 numbers)"</string>
    <string name="contact_Delete_warning">"Are you sure you want to delete this contact ?"</string>
    <string name="permission_denied">"Permission has been permanently denied, CLICK HERE to enable"</string>
    <string name="edit_contact">edit contact</string>
    <string name="update">Update</string>
    <string name="update_contact">Update Contact</string>
    <string name="video_call">video call</string>
</resources>