<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@color/white"
    android:padding="6dp"
    >

    <TextView
        android:id="@+id/rv_item_tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rv_item_ivphone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rv_item_ivphone"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/call_contact"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintBottom_toBottomOf="@+id/rv_item_tv_name"
        app:layout_constraintEnd_toStartOf="@id/rv_item_video"
        app:layout_constraintTop_toTopOf="@+id/rv_item_tv_name" />

    <ImageView
        android:id="@+id/rv_item_edit"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit_contact"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/rv_item_ivphone"
        app:layout_constraintEnd_toStartOf="@id/rv_item_delete"
        app:layout_constraintTop_toTopOf="@+id/rv_item_ivphone" />

    <ImageView
        android:id="@+id/rv_item_video"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/video_call"
        android:src="@drawable/ic_baseline_videocam_24"
        app:layout_constraintBottom_toBottomOf="@+id/rv_item_ivphone"
        app:layout_constraintEnd_toStartOf="@id/rv_item_edit"
        app:layout_constraintTop_toTopOf="@+id/rv_item_ivphone" />

    <ImageView
        android:id="@+id/rv_item_delete"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete_contact"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="@+id/rv_item_ivphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rv_item_ivphone" />


</androidx.constraintlayout.widget.ConstraintLayout>